--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,36 @@
-title: WatsApp TV
-description: Discover entertaining clips that capture the funny things that happen when people and animals are at their spontaneous best
-url: http://www.watsapp.tv
+title: Allpree.com
+description: Discover Hand-Picked Products In Various Categories From Local & Overseas Retailers That Offer Up To 80% Crazy Discount Without You Every Leaving WhatsApp
+url: http://www.allpree.com
 date_format: '%B %d, %Y'
-logo: watsapplogo.png
+logo: 
 permalink: :title
 tell: 18763078162
 contact: '/contact/#wj-contact'
 learn-more: '/about/#wj-features'
 github: https://github.com
-youtube: https://www.youtube.com/joinwatsapp
+youtube: https://www.youtube.com/
 
 twitter:
-  username: joinwatsapp
+  username: 
   
 Instagram:
-  username: joinwatsapp
+  username: 
   
 Snapchat:
-  username: joinwatsapp
+  username: 
 
 social:
-  name: joinwatsapp
+  name: 
   links:
-    - https://twitter.com/joinwatsapp
-    - https://facebook.com/joinwatsapp
-    - https://snapchat.com/add/joinwatsapp
-    - https://instagram.com/joinwatsapp
+    - https://twitter.com/
+    - https://facebook.com/
+    - https://snapchat.com/add/
+    - https://instagram.com/
 
 
 facebook:
- app_id: 549480635219583
- publisher: joinwatsapp
+ app_id: 
+ publisher: 
  admins: garen
 
 include: ["_pages"]
