--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Allpree.com
 description: Discover Hand-Picked Products In Various Categories From Local & Overseas Retailers That Offer Up To 80% Crazy Discount Without You Every Leaving WhatsApp
 url: http://www.allpree.com
 date_format: '%B %d, %Y'
-logo: Allpree.jpg
+logo: Allpreelogo.png
 permalink: :title
 tell: 18763078189
 contact: '/contact/#wj-contact'
